Closed Bug 1605659 Opened 6 years ago Closed 6 years ago

Several "definition of implicit copy constructor for 'xxxx' is deprecated because it has a user-declared copy assignment operator [-Werror,-Wdeprecated-copy]"

Categories

(Developer Infrastructure :: Source Code Analysis, defect, P3)

defect

Tracking

(firefox74 fixed)

RESOLVED FIXED
mozilla74
Tracking Status
firefox74 --- fixed

People

(Reporter: Sylvestre, Assigned: andi)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

 In file included from /var/lib/jenkins/workspace/firefox-clang-last/security/manager/ssl/DataStorage.cpp:11:
 In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/ipc/ipdl/_ipdlheaders/mozilla/dom/PContent.h:11:
 In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/ipc/IPCMessageUtils.h:11:
 In file included from /var/lib/jenkins/workspace/firefox-clang-last/ipc/chromium/src/chrome/common/ipc_message_utils.h:18:
 /var/lib/jenkins/workspace/firefox-clang-last/ipc/chromium/src/base/time.h:337:14: error: definition of implicit copy constructor for 'TimeTicks' is deprecated because it has a user-declared copy assignment operator [-Werror,-Wdeprecated-copy]
   TimeTicks& operator=(TimeTicks other) {
              ^
 /var/lib/jenkins/workspace/firefox-clang-last/ipc/chromium/src/base/message_loop.h:305:11: note: in implicit copy constructor for 'base::TimeTicks' first required here
           delayed_run_time(aOther.delayed_run_time),
           ^
 In file included from Unified_cpp_security_manager_ssl0.cpp:2:
 In file included from /var/lib/jenkins/workspace/firefox-clang-last/security/manager/ssl/CSTrustDomain.cpp:8:
 In file included from /var/lib/jenkins/workspace/firefox-clang-last/security/manager/ssl/cert_storage/src/cert_storage.h:11:
 In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/SyncRunnable.h:10:
 In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/nsThreadUtils.h:21:
 In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/nsString.h:17:
 In file included from /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/nsDependentSubstring.h:11:
 /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/nsTDependentSubstring.h:97:8: error: definition of implicit copy constructor for 'nsTDependentSubstring<char>' is deprecated because it has a user-declared copy assignment operator [-Werror,-Wdeprecated-copy]
   void operator=(
        ^
 /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/nsHttp.h:293:9: note: in implicit copy constructor for 'nsTDependentSubstring<char>' first required here
       : mName(copy.mName),
         ^
 /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/nsHttp.h:152:8: error: definition of implicit copy constructor for 'nsHttpAtom' is deprecated because it has a user-declared copy assignment operator [-Werror,-Wdeprecated-copy]
   void operator=(const nsHttpAtom& a) { _val = a._val; }
        ^
 /var/lib/jenkins/workspace/firefox-clang-last/obj-x86_64-pc-linux-gnu/dist/include/nsHttpHeaderArray.h:85:41: note: in implicit copy constructor for 'mozilla::net::nsHttpAtom' first required here
     return nsHttp::FindToken(PeekHeader(header), value, HTTP_HEADER_VALUE_SEPS);
                                         ^

Nathan fixed something similar in bug 1603409

Assignee: nobody → bpostelnicu

The priority flag is not set for this bug.
:Sylvestre, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(sledru)
Flags: needinfo?(sledru)
Priority: -- → P3
Pushed by bpostelnicu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a225046c4122 fix some errors discovered with `-Wdeprecated-copy`. r=valentin
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
Blocks: clang-10
Product: Firefox Build System → Developer Infrastructure
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: