Bug 1605659 - fix some errors discovered with `-Wdeprecated-copy`. r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D59296

--HG--
extra : moz-landing-system : lando