netwerk/protocol/http/nsHttpChunkedDecoder.cpp
@@ -114,7 +114,7 @@ nsresult nsHttpChunkedDecoder::ParseChunkRemaining(char* buf, uint32_t count,
           mTrailers = new nsHttpHeaderArray();
         }
 
-        nsHttpAtom hdr = {nullptr};
+        nsHttpAtom hdr;
         nsAutoCString headerNameOriginal;
         nsAutoCString val;
         if (NS_SUCCEEDED(
